--- a/site.yml
+++ b/site.yml
@@ -1,6 +1,6 @@
 ---
 site:
-  title: Hybrid cloud automation,Azure Cloud operations
+  title: Hybrid cloud automation, Azure Infrastructure Optimization
   url: https://redhat-scholars.github.io/course-template
   start_page: modules::index.adoc
 
