--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "yaml.schemas": {
         "kubernetes": "*.yaml ",
         "https://raw.githubusercontent.com/ansible/ansible-lint/main/src/ansiblelint/schemas/ansible.json#/$defs/playbook": "file:///Users/hmourad/Documents/GitHub/zt-ans-bu-terraform-aap/runtime-automation/main.yml"
-    }
+    },
+    "ansible.python.interpreterPath": "/usr/local/bin/python3"
 }
